fix(deps): update dependency us.fatehi:schemacrawler to v16